Upgrade to Luigi 1.0

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -1,18 +1,4 @@
-// font paths
-$fd-icons-path: "~fiori-fundamentals/scss/icons/";
-$fd-scss-font-path: "~fiori-fundamentals/scss/fonts/";
+@import "~fundamental-styles/dist/fundamental-styles.css";
+@import "~@luigi-project/core/luigi.css";
 
-// core styles
-@import "~fiori-fundamentals/scss/core";
-@import "~fiori-fundamentals/scss/helpers";
-@import "~fiori-fundamentals/scss/layout";
-@import "~fiori-fundamentals/scss/mixins";
 
-@import "~fiori-fundamentals/scss/fonts";
-@import "~fiori-fundamentals/scss/icons";
-
-// individual components
-@import "~fiori-fundamentals/scss/components/modal";
-@import "~fiori-fundamentals/scss/components/button";
-
-@import "~@kyma-project/luigi-core/luigi.css"
